--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./html:/usr/share/nginx/html
     restart: always
+
+  ntp:
+    image: cturra/ntp
+    ports:
+      - '123:123/udp'
+    environment:
+      - TZ=America/Sao_Paulo
+    restart: always
