--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,18 @@ services:
     environment:
       - TZ=America/Sao_Paulo
     restart: always
+  
+  samba:
+    image: dperson/samba
+    ports:
+      - "137:137/udp"
+      - "138:138/udp"
+      - "139:139/tcp"
+      - "445:445/tcp"
+    volumes:
+      - /~/samba/share:/mount
+    environment:
+      - SMB_USER=smbDocker
+      - SMB_PASSWORD=1234
+      - SMB_SHARE_NAME=share
+    restart: always
