--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.3'
 
+networks:
+  intranet:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
+
 services:
   nginx:
     container_name: nginx
@@ -10,6 +17,9 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./html:/usr/share/nginx/html
     restart: always
+    networks:
+      intranet:
+        ipv4_address: 172.18.0.2
 
   ntp:
     container_name: ntp
@@ -19,6 +29,9 @@ services:
     environment:
       - TZ=America/Sao_Paulo
     restart: always
+    networks:
+      intranet:
+        ipv4_address: 172.18.0.3
   
   samba:
     container_name: samba
@@ -35,3 +48,6 @@ services:
       - SMB_PASSWORD=1234
       - SMB_SHARE_NAME=share
     restart: always
+    networks:
+      intranet:
+        ipv4_address: 172.18.0.4
