--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,17 +37,26 @@ services:
     container_name: samba
     image: dperson/samba
     ports:
-      - "137:137/udp"
-      - "138:138/udp"
-      - "139:139"
-      - "445:445"
+      - '137:137/udp'
+      - '138:138/udp'
+      - '139:139'
+      - '445:445'
     volumes:
       - ./samba:/mount
     environment:
       - USERID=1000
       - GROUPID=1000
-    command: -s "Public;/mount;yes;no;yes;all;none;none"
+    command: -s 'Public;/mount;yes;no;yes;all;none;none'
     restart: always
     networks:
       lan_network:
         ipv4_address: 172.18.0.4
+  
+  ssh:
+    container_name: ssh
+    image: rastasheep/ubuntu-sshd:18.04
+    ports:
+      - '3022:22'
+    volumes:
+      - ./ssh/id_rsa.pub:/root/.ssh/authorized_keys
+    command: /usr/sbin/sshd -D
