--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,3 +60,25 @@ services:
     volumes:
       - ./ssh/id_rsa.pub:/root/.ssh/authorized_keys
     command: /usr/sbin/sshd -D
+    networks:
+     lan_network:
+      ipv4_address: 172.18.0.5
+    restart: always
+
+  bind9:
+    container_name: bind9
+    image: ubuntu/bind9
+    ports:
+      - "3053:53/tcp"
+      - "3053:53/udp"
+    volumes:
+      - ./bind9/config:/etc/bind
+      - ./bind9/cache:/var/cache/bind
+      # - ./bind9/records:/var/lib/bind
+    environment:
+      - BIND9_USER=root
+      - TZ=America/Sao_Paulo
+    networks:
+     lan_network:
+      ipv4_address: 172.18.0.6
+    restart: unless-stopped
