--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     ports:
       - '80:80'
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./html:/usr/share/nginx/html
+      - ./http/nginx.conf:/etc/nginx/nginx.conf
+      - ./http/html:/usr/share/nginx/html
     networks:
       lan_network:
         ipv4_address: 172.18.0.2
