--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     networks:
       lan_network:
         ipv4_address: 172.18.0.2
+    restart: on-failure
 
   ntp:
     container_name: ntp
@@ -30,6 +31,7 @@ services:
     networks:
       lan_network:
         ipv4_address: 172.18.0.3
+    restart: on-failure
   
   samba:
     container_name: samba
@@ -48,6 +50,7 @@ services:
     networks:
       lan_network:
         ipv4_address: 172.18.0.4
+    restart: on-failure
   
   ssh:
     container_name: ssh
@@ -60,6 +63,7 @@ services:
     networks:
      lan_network:
       ipv4_address: 172.18.0.5
+    restart: on-failure
 
   bind9:
     container_name: bind9
@@ -69,11 +73,10 @@ services:
       - "3053:53/udp"
     volumes:
       - ./bind9/config:/etc/bind
-      - ./bind9/cache:/var/cache/bind
-      # - ./bind9/records:/var/lib/bind
     environment:
       - BIND9_USER=root
       - TZ=America/Sao_Paulo
     networks:
      lan_network:
       ipv4_address: 172.18.0.6
+    restart: on-failure
